--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       <button type="close" class="popup__close-button"></button>
       <form class="popup__form" name="user-form">
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" name="user-name" class="popup__user-name popup__form-input" aria-label="Ваше имя" >
-        <input type="text" name="user-job" class="popup__user-job popup__form-input" aria-label="Ваша профессия">
+        <input type="text" name="user-name" class="popup__user-name popup__form-input" aria-label="Ваше имя" placeholder="Жак-Ив Кусто">
+        <input type="text" name="user-job" class="popup__user-job popup__form-input" aria-label="Ваша профессия" placeholder="Исследователь океана">
         <button type="submit" class="popup__save-button">Сохранить</button>
       </form>
     </div>
