--- a/index.html
+++ b/index.html
@@ -15,84 +15,87 @@
     <img class="header__logo logo" src="./images/Logo-white.svg" alt="Логотип Место">
   </header>
 
-  <section class="profile">
-    <img class="profile__avatar" alt="фото профиля" src="./images/Avatar.jpg">
-    <div class="profile__info">
-      <h1 class="profile__title">Жак-Ив Кусто</h1>
-      <p class="profile__subtitle">Исследователь океана</p>
-    </div>
-    <button type="button" class="edit-profile profile__edit-profile" aria-label="Редактировать">
-      <img src="./images/Edit-Button.svg" alt="Редактировать профиль" class="edit-profile__icon">
-    </button>
-
-    <button type="button" class="add-button profile__add-button" aria-label="Добавить">
-      <img src="./images/Add-Button.svg" alt="Добавить" class="add-button__icon">
-    </button>
-  </section>
-
-  <section class="elements">
-
-    <div class="element">
-      <img class="element__foto" alt="замок" src="./images/lock.jpg">
-      <div class="element__item">
-        <h2 class="element__text">Карачаевск</h2>
-        <button type="checkbox" class="element__heart element__heart-active" aria-label="нажать на сердце"></button>
+  <main class="main">
+    <section class="profile">
+      <img class="profile__avatar" alt="фото профиля" src="./images/Avatar.jpg">
+      <div class="profile__info">
+        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <p class="profile__subtitle">Исследователь океана</p>
       </div>
-    </div>
+      <button type="button" class="edit-profile profile__edit-profile" aria-label="Редактировать">
+        <img src="./images/Edit-Button.svg" alt="Редактировать профиль" class="edit-profile__icon">
+      </button>
 
-    <div class="element">
-      <img class="element__foto" alt="гора эльбрус" src="./images/Mountain-Elbrus.jpg">
-      <div class="element__item">
-        <h2 class="element__text">Гора Эльбрус</h2>
-        <button type="checkbox" class="element__heart element__heart-active" aria-label="нажать на сердце"></button>
+      <button type="button" class="add-button profile__add-button" aria-label="Добавить">
+        <img src="./images/Add-Button.svg" alt="Добавить" class="add-button__icon">
+      </button>
+    </section>
+
+    <section class="elements">
+
+      <div class="element">
+        <img class="element__foto" alt="замок" src="./images/lock.jpg">
+        <div class="element__item">
+          <h2 class="element__text">Карачаевск</h2>
+          <button type="button" class="element__heart element__heart_active" aria-label="нажать на сердце"></button>
+        </div>
       </div>
-    </div>
 
-    <div class="element">
-      <img class="element__foto" alt="домбай" src="./images/Dombai.jpg">
-      <div class="element__item">
-        <h2 class="element__text">Домбай</h2>
-        <button type="checkbox" class="element__heart element__heart-active" aria-label="нажать на сердце"></button>
+      <div class="element">
+        <img class="element__foto" alt="гора эльбрус" src="./images/Mountain-Elbrus.jpg">
+        <div class="element__item">
+          <h2 class="element__text">Гора Эльбрус</h2>
+          <button type="button" class="element__heart element__heart_active" aria-label="нажать на сердце"></button>
+        </div>
       </div>
-    </div>
 
-    <div class="element">
-      <img class="element__foto" alt="гора эльбрус" src="./images/Mountain-Elbrus.jpg">
-      <div class="element__item">
-        <h2 class="element__text">Домбай</h2>
-        <button type="checkbox" class="element__heart element__heart-active" aria-label="нажать на сердце"></button>
+      <div class="element">
+        <img class="element__foto" alt="домбай" src="./images/Dombai.jpg">
+        <div class="element__item">
+          <h2 class="element__text">Домбай</h2>
+          <button type="button" class="element__heart element__heart_active" aria-label="нажать на сердце"></button>
+        </div>
       </div>
-    </div>
 
-    <div class="element">
-      <img class="element__foto" alt="домбай" src="./images/Dombai.jpg">
-      <div class="element__item">
-        <h2 class="element__text">Домбай</h2>
-        <button type="checkbox" class="element__heart element__heart-active" aria-label="нажать на сердце"></button>
+      <div class="element">
+        <img class="element__foto" alt="гора эльбрус" src="./images/Mountain-Elbrus.jpg">
+        <div class="element__item">
+          <h2 class="element__text">Домбай</h2>
+          <button type="button" class="element__heart element__heart_active" aria-label="нажать на сердце"></button>
+        </div>
       </div>
-    </div>
 
-    <div class="element">
-      <img class="element__foto" alt="замок" src="./images/lock.jpg">
-      <div class="element__item">
-        <h2 class="element__text">Карачаево-Ч...</h2>
-        <button type="checkbox" class="element__heart element__heart-active" aria-label="нажать на сердце"></button>
+      <div class="element">
+        <img class="element__foto" alt="домбай" src="./images/Dombai.jpg">
+        <div class="element__item">
+          <h2 class="element__text">Домбай</h2>
+          <button type="button" class="element__heart element__heart_active" aria-label="нажать на сердце"></button>
+        </div>
       </div>
-    </div>
 
-  </section>
+      <div class="element">
+        <img class="element__foto" alt="замок" src="./images/lock.jpg">
+        <div class="element__item">
+          <h2 class="element__text">Карачаево-Ч...</h2>
+          <button type="button" class="element__heart element__heart_active" aria-label="нажать на сердце"></button>
+        </div>
+      </div>
+
+    </section>
+  </main>
 
   <footer class="footer">
     <p class="footer__copyright">&#64; 2020 Mesto Russia</p>
   </footer>
 
-  <section class="popup popup__opened">
+  <section class="popup popup_opened">
     <div class="popup__window">
-      <button type="close" class="popup__close-button"></button>
+      <button type="button" class="popup__close-button"></button>
       <form class="popup__form" name="user-form">
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" name="user-name" class="popup__user-name popup__form-input" aria-label="Ваше имя" placeholder="Жак-Ив Кусто">
-        <input type="text" name="user-job" class="popup__user-job popup__form-input" aria-label="Ваша профессия" placeholder="Исследователь океана">
+        <input type="text" name="user-name" class="popup__form-input" aria-label="Ваше имя" placeholder="Жак-Ив Кусто">
+        <input type="text" name="user-job" class="popup__form-input" aria-label="Ваша профессия"
+          placeholder="Исследователь океана">
         <button type="submit" class="popup__save-button">Сохранить</button>
       </form>
     </div>
