--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <section class="elements">
 
       <div class="element">
+        <button class="element__delete" type="button"></button>
         <img class="element__foto" alt="замок" src="./images/lock.jpg">
         <div class="element__item">
           <h2 class="element__text">Карачаевск</h2>
@@ -42,6 +43,7 @@
       </div>
 
       <div class="element">
+        <button class="element__delete" type="button"></button>
         <img class="element__foto" alt="гора эльбрус" src="./images/Mountain-Elbrus.jpg">
         <div class="element__item">
           <h2 class="element__text">Гора Эльбрус</h2>
@@ -50,6 +52,7 @@
       </div>
 
       <div class="element">
+        <button class="element__delete" type="button"></button>
         <img class="element__foto" alt="домбай" src="./images/Dombai.jpg">
         <div class="element__item">
           <h2 class="element__text">Домбай</h2>
@@ -58,6 +61,7 @@
       </div>
 
       <div class="element">
+        <button class="element__delete" type="button"></button>
         <img class="element__foto" alt="гора эльбрус" src="./images/Mountain-Elbrus.jpg">
         <div class="element__item">
           <h2 class="element__text">Домбай</h2>
@@ -66,6 +70,7 @@
       </div>
 
       <div class="element">
+        <button class="element__delete" type="button"></button>
         <img class="element__foto" alt="домбай" src="./images/Dombai.jpg">
         <div class="element__item">
           <h2 class="element__text">Домбай</h2>
@@ -74,6 +79,7 @@
       </div>
 
       <div class="element">
+        <button class="element__delete" type="button"></button>
         <img class="element__foto" alt="замок" src="./images/lock.jpg">
         <div class="element__item">
           <h2 class="element__text">Карачаево-Ч...</h2>
@@ -88,18 +94,52 @@
     <p class="footer__copyright">&#64; 2020 Mesto Russia</p>
   </footer>
 
-  <section class="popup popup_opened">
-    <div class="popup__window">
-      <button type="button" class="popup__close-button"></button>
-      <form class="popup__form" name="user-form">
+  <section class="popup popup_edit-profile">
+    <div class="popup__container">
+      <button class="popup__close" type="button"></button>
+      <form class="popup__form" name="profile-action">
         <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" name="user-name" class="popup__form-input" aria-label="Ваше имя" placeholder="Жак-Ив Кусто">
-        <input type="text" name="user-job" class="popup__form-input" aria-label="Ваша профессия"
-          placeholder="Исследователь океана">
-        <button type="submit" class="popup__save-button">Сохранить</button>
+        <input type="text" name="name" class="popup__form-input" aria-label="Ваше имя" placeholder="Имя" value required>
+        <input type="text" name="job" class="popup__form-input" aria-label="Ваша профессия"
+          placeholder="Ваша профессия" value required>
+        <button type="submit" class="popup__button">Сохранить</button>
       </form>
     </div>
   </section>
-</body>
 
+  <section class="popup popup_add-card">
+    <div class="popup__container">
+      <button class="popup__close" type="button"></button>
+      <form class="popup__form" name="card-action">
+        <h3 class="popup__title">Новое место</h3>
+        <input type="text" name="text" class="popup__form-input" aria-label="Название" placeholder="Название" value required>
+        <input type="text" name="url" class="popup__form-input" aria-label="Ссылка на картинку"
+          placeholder="Ссылка на картинку" value required>
+        <button type="submit" class="popup__button">Сохранить</button>
+      </form>
+    </div>
+  </section>
+
+  <section class="popup popup_image">
+    <figure class="figure">
+      <button class="popup__close" type="button"></button>
+      <img class="popup__picture" src="#" alt="">
+      <figcaption class="figure__quote figure__quote_view-image"></figcaption>
+    </figure>
+  </section>
+        
+  <template id="cards-element">
+    <article class="card">
+      <button class="card__delete-button" type="button"></button>
+      <img class="card__image" src="#" alt="">
+      <div class="card__about">
+        <h2 class="card__info"></h2>
+        <button class="card__like" type="button"></button>
+      </div>
+    </article>
+  </template>
+
+  <script src="scripts/cards.js"></script>
+  <script src="scripts/index.js"></script>
+</body>
 </html>
